@@ -1,73 +1,139 @@
 package com.mall.review;
 
-import com.mall.review.dto.*;
+import com.mall.product.Product;
+import com.mall.product.ProductRepository;
+import com.mall.review.dto.CreateReviewRequest;
+import com.mall.review.dto.ReviewDto;
+import com.mall.user.User;
+import com.mall.user.UserRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+
+import java.time.LocalDateTime;
+import java.time.format.DateTimeFormatter;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class ReviewService {
-    private final ReviewRepository repo;
 
-    public List<ReviewDto> getProductReviews(Long productId) {
-        return repo.findByProductIdAndApprovedOrderByCreatedAtDesc(productId, true).stream()
-                .map(this::toDto).toList();
+    private final ReviewRepository reviewRepository;
+    private final ProductRepository productRepository;
+    private final UserRepository userRepository;
+
+    private final DateTimeFormatter formatter = DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss");
+
+    @Transactional
+    public ReviewDto createReview(CreateReviewRequest request, String userEmail) {
+        // Find the user by email
+        User user = userRepository.findByEmail(userEmail)
+                .orElseThrow(() -> new RuntimeException("User not found"));
+
+        // Find the product by ID
+        Product product = productRepository.findById(request.getProductId())
+                .orElseThrow(() -> new RuntimeException("Product not found"));
+
+        // Validate rating
+        if (request.getRating() < 1 || request.getRating() > 5) {
+            throw new RuntimeException("Rating must be between 1 and 5");
+        }
+
+        // ✅ Create the review object WITH userEmail field
+        Review review = Review.builder()
+                .product(product)
+                .user(user)
+                .userEmail(userEmail)  // ✅ THIS IS THE FIX!
+                .rating(request.getRating())
+                .comment(request.getComment())
+                .status(ReviewStatus.PENDING)
+                .approved(false)
+                .createdAt(LocalDateTime.now())  // ✅ Set createdAt explicitly
+                .build();
+
+        // Save review
+        review = reviewRepository.save(review);
+
+        // Return as DTO
+        return convertToDto(review);
     }
 
-    public List<ReviewDto> getUserReviews(String userEmail) {
-        return repo.findByUserEmailOrderByCreatedAtDesc(userEmail).stream()
-                .map(this::toDto).toList();
+    public List<ReviewDto> getAllReviews() {
+        return reviewRepository.findByOrderByCreatedAtDesc()
+                .stream()
+                .map(this::convertToDto)
+                .collect(Collectors.toList());
+    }
+
+    public List<ReviewDto> getReviewsByProduct(Long productId) {
+        return reviewRepository.findByProductId(productId)
+                .stream()
+                .map(this::convertToDto)
+                .collect(Collectors.toList());
+    }
+
+    public List<ReviewDto> getApprovedReviewsByProduct(Long productId) {
+        return reviewRepository.findByProductIdAndStatus(productId, ReviewStatus.APPROVED)
+                .stream()
+                .map(this::convertToDto)
+                .collect(Collectors.toList());
     }
 
     public List<ReviewDto> getPendingReviews() {
-        return repo.findByApprovedOrderByCreatedAtDesc(false).stream()
-                .map(this::toDto).toList();
+        return reviewRepository.findByStatus(ReviewStatus.PENDING)
+                .stream()
+                .map(this::convertToDto)
+                .collect(Collectors.toList());
+    }
+
+    public List<ReviewDto> getMyReviews(String userEmail) {
+        User user = userRepository.findByEmail(userEmail)
+                .orElseThrow(() -> new RuntimeException("User not found"));
+
+        return reviewRepository.findByUserId(user.getId())
+                .stream()
+                .map(this::convertToDto)
+                .collect(Collectors.toList());
     }
 
     @Transactional
-    public ReviewDto createReview(String userEmail, CreateReviewRequest req) {
-        if (req.rating() < 1 || req.rating() > 5) {
-            throw new IllegalArgumentException("Rating must be between 1 and 5");
-        }
+    public ReviewDto approveReview(Long reviewId) {
+        Review review = reviewRepository.findById(reviewId)
+                .orElseThrow(() -> new RuntimeException("Review not found"));
 
-        var review = Review.builder()
-                .productId(req.productId())
-                .userEmail(userEmail)
-                .rating(req.rating())
-                .comment(req.comment())
-                .approved(false)
+        review.setStatus(ReviewStatus.APPROVED);
+        review = reviewRepository.save(review);
+        return convertToDto(review);
+    }
+
+    @Transactional
+    public ReviewDto rejectReview(Long reviewId) {
+        Review review = reviewRepository.findById(reviewId)
+                .orElseThrow(() -> new RuntimeException("Review not found"));
+
+        review.setStatus(ReviewStatus.REJECTED);
+        review = reviewRepository.save(review);
+        return convertToDto(review);
+    }
+
+    @Transactional
+    public void deleteReview(Long reviewId) {
+        reviewRepository.deleteById(reviewId);
+    }
+
+    private ReviewDto convertToDto(Review review) {
+        return ReviewDto.builder()
+                .id(review.getId())
+                .productId(review.getProduct().getId())
+                .productName(review.getProduct().getName())
+                .userId(review.getUser().getId())
+                .userName(review.getUser().getEmail())  // ✅ CHANGE: Use getEmail() instead of getFullName()
+                .rating(review.getRating())
+                .comment(review.getComment())
+                .status(review.getStatus())
+                .createdAt(review.getCreatedAt().format(formatter))
                 .build();
-
-        return toDto(repo.save(review));
     }
 
-    @Transactional
-    public ReviewDto approveReview(Long id, ReviewActionRequest req) {
-        var review = repo.findById(id).orElseThrow(() -> new IllegalArgumentException("Review not found"));
-        review.setApproved(true);
-        review.setAdminNote(req.adminNote());
-        return toDto(repo.save(review));
-    }
-
-    @Transactional
-    public void rejectReview(Long id, ReviewActionRequest req) {
-        var review = repo.findById(id).orElseThrow(() -> new IllegalArgumentException("Review not found"));
-        review.setAdminNote(req.adminNote());
-        repo.delete(review);
-    }
-
-    private ReviewDto toDto(Review r) {
-        return new ReviewDto(
-                r.getId(),
-                r.getProductId(),
-                r.getUserEmail(),
-                r.getRating(),
-                r.getComment(),
-                r.getApproved(),
-                r.getAdminNote(),
-                r.getCreatedAt()
-        );
-    }
 }
